// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When invoked a Cart component Should render a moto with detail 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": 700,
      "width": 600,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://www.motoblouz.com/enjoytheride/wp-content/uploads/2018/10/cosmo_connected_nuit.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 700,
          "width": 600,
        },
        undefined,
      ]
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
  >
    <RCTScrollView>
      <View>
        <Image
          source={
            Object {
              "uri": "https://i.postimg.cc/FF2Y5GJd/logo-small.png",
            }
          }
          style={
            Object {
              "height": 42,
              "marginLeft": 10,
              "marginTop": 15,
              "width": 300,
            }
          }
        />
        <View
          style={
            Object {
              "borderTopColor": "#FFB800",
              "borderTopWidth": 2,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 15,
              "marginTop": 10,
              "width": 390,
            }
          }
        >
          <View
            style={
              Object {
                "height": 150,
                "marginLeft": 23,
                "marginTop": 10,
                "width": 200,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "undefined",
                }
              }
              style={
                Object {
                  "borderRadius": 25,
                  "height": 130,
                  "marginLeft": 15,
                  "width": 180,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 15,
                "height": 130,
                "marginLeft": 20,
                "marginTop": 10,
                "padding": 20,
                "width": 150,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                }
              }
            >
               
               
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                }
              }
            >
              Cantidad: 
               
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFB800",
                  "fontSize": 24,
                  "marginLeft": 20,
                  "marginTop": 10,
                }
              }
            >
              NaN
              €
            </Text>
            <Text
              style={
                Object {
                  "opacity": 0,
                }
              }
            >
              NaN
              €
            </Text>
          </View>
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Image
                source={
                  Object {
                    "uri": "https://i.postimg.cc/nhvmXCj2/icons8-xbox-x-50.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "marginTop": 10,
                    "width": 30,
                  }
                }
                testID="buttonDelete"
              />
            </View>
          </View>
          <Text
            style={
              Object {
                "opacity": 0,
              }
            }
          >
            NaN
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "#464646",
        "display": "flex",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginTop": 552,
        "padding": 10,
        "position": "absolute",
        "width": 415,
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#FFB800",
          "fontSize": 20,
        }
      }
    >
      TOTAL: 
      NaN
       €
    </Text>
    <Text
      style={
        Object {
          "color": "#FFB800",
        }
      }
    >
      Inicia sesión para comprar
    </Text>
  </View>
</View>
`;

exports[`When invoked a Cart component Should render a moto with detail 2`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": 700,
      "width": 600,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "https://www.motoblouz.com/enjoytheride/wp-content/uploads/2018/10/cosmo_connected_nuit.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 700,
          "width": 600,
        },
        undefined,
      ]
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
  >
    <RCTScrollView>
      <View>
        <Image
          source={
            Object {
              "uri": "https://i.postimg.cc/FF2Y5GJd/logo-small.png",
            }
          }
          style={
            Object {
              "height": 42,
              "marginLeft": 10,
              "marginTop": 15,
              "width": 300,
            }
          }
        />
        <View
          style={
            Object {
              "borderTopColor": "#FFB800",
              "borderTopWidth": 2,
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 15,
              "marginTop": 10,
              "width": 390,
            }
          }
        >
          <View
            style={
              Object {
                "height": 150,
                "marginLeft": 23,
                "marginTop": 10,
                "width": 200,
              }
            }
          >
            <Image
              source={
                Object {
                  "uri": "undefined",
                }
              }
              style={
                Object {
                  "borderRadius": 25,
                  "height": 130,
                  "marginLeft": 15,
                  "width": 180,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "backgroundColor": "white",
                "borderRadius": 15,
                "height": 130,
                "marginLeft": 20,
                "marginTop": 10,
                "padding": 20,
                "width": 150,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                }
              }
            >
               
               
            </Text>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontSize": 18,
                }
              }
            >
              Cantidad: 
               
            </Text>
            <Text
              style={
                Object {
                  "color": "#FFB800",
                  "fontSize": 24,
                  "marginLeft": 20,
                  "marginTop": 10,
                }
              }
            >
              NaN
              €
            </Text>
            <Text
              style={
                Object {
                  "opacity": 0,
                }
              }
            >
              NaN
              €
            </Text>
          </View>
          <View
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Image
                source={
                  Object {
                    "uri": "https://i.postimg.cc/nhvmXCj2/icons8-xbox-x-50.png",
                  }
                }
                style={
                  Object {
                    "height": 30,
                    "marginTop": 10,
                    "width": 30,
                  }
                }
                testID="buttonDelete"
              />
            </View>
          </View>
          <Text
            style={
              Object {
                "opacity": 0,
              }
            }
          >
            NaN
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "backgroundColor": "#464646",
        "display": "flex",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "marginTop": 552,
        "padding": 10,
        "position": "absolute",
        "width": 415,
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#FFB800",
          "fontSize": 20,
        }
      }
    >
      TOTAL: 
      NaN
       €
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Image
        source={
          Object {
            "uri": "https://i.postimg.cc/xCtp4npb/icons8-us-dollar-50.png",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
        testID="buyButton"
      />
    </View>
  </View>
</View>
`;
